tests/approval/snapshots/approval_mysql__server_info.snap
---
source: tests/approval/mysql.rs
assertion_line: 31
expression: info
---
{
  "protocolVersion": "2025-11-25",
  "capabilities": {
    "tools": {}
  },
  "serverInfo": {
    "name": "database-mcp",
    "title": "Database MCP Server",
    "version": "[version]",
    "description": "Database MCP Server for MySQL and MariaDB",
    "websiteUrl": "https://database.haymon.ai"
  },
  "instructions": "## Workflow\n\n1. Call `listDatabases` to discover available databases.\n2. Call `listTables` with a `database` to see its tables.\n3. Call `listViews` with a `database` to see its views.\n4. Call `listTriggers` with a `database` to see its triggers.\n5. Call `listFunctions` with a `database` to see its stored functions.\n6. Call `listProcedures` with a `database` to see its stored procedures.\n7. Call `getTableSchema` with `database` and `table` to inspect columns, types, and foreign keys before writing queries.\n8. Use `readQuery` for read-only SQL (SELECT, SHOW, DESCRIBE, USE, EXPLAIN).\n9. Use `writeQuery` for data changes (INSERT, UPDATE, DELETE, CREATE, ALTER, DROP).\n10. Use `explainQuery` to analyze query execution plans and diagnose slow queries.\n11. Use `createDatabase` to create a new database.\n12. Use `dropDatabase` to drop an existing database.\n13. Use `dropTable` to remove a table from a database.\n\n## Constraints\n\n- The `writeQuery`, `createDatabase`, `dropDatabase`, and `dropTable` tools are hidden when read-only mode is active.\n- Multi-statement queries are not supported. Send one statement per request."
}
